# bitwarden-external-secrets

./: .gitignore  Containerfile  README.md  entrypoint.sh  index.yaml
.github/workflows/: build-cli.yaml  build-opreator.yaml  build.yaml  chart.yaml
charts/bitwarden-external-secrets/: Chart.yaml  values.yaml
charts/bitwarden-external-secrets/crds/: bitwarden-secret-crd.yaml  external-secret.yaml
charts/bitwarden-external-secrets/templates/: cluster-secret-stores.yaml  clustersecretstores.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  operator-deployment.yaml  operator-rbac.yaml  secret.yaml  service.yaml
operator/: Containerfile  pyproject.toml  requirements.txt
operator/src/: .dockerignore  main.py  models.py  utils.py
tools/: compose.yaml  test.sh
